--- a/app/src/main/res/anim/da_slide_in_right.xml
+++ b/app/src/main/res/anim/da_slide_in_right.xml
@@ -3,7 +3,7 @@
      android:shareInterpolator="false">
 
     <translate
-        android:duration="@integer/animation_default_duration"
+        android:duration="300"
         android:fromXDelta="100%"
         android:toXDelta="0%"
         android:fromYDelta="0%"
